--- a/vis.ipynb
+++ b/vis.ipynb
@@ -18,7 +18,7 @@
     "# Run zig build pagefault and capture CSV output\n",
     "import subprocess\n",
     "\n",
-    "result = subprocess.run(['zig', 'build', '--release=safe', 'pagefault'], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "result = subprocess.run(['zig', 'build', '--release=safe', 'sandbox', '--', 'pagefault'], stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
     "csv_output = result.stdout\n",
     "print(csv_output)\n"
    ]
